<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lheido SMS</string>
    <string name="preferenceActivity_title">Lheido SMS Paramètres</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_call_title">Appeler</string>
    <string name="action_new_sms">Nouveau message</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ContactPicture">Contact Picture</string>
    <string name="send_message">Send message</string>
    <string name="empty_message">Empty sms</string>
    <string name="empty_sms"></string>
    <string name="enter_sms">Entrer un message</string>
    <string name="enter_contact">Entrer un numéro</string>
    <string name="content_mms">mms</string>
    <string name="pref_global">Général</string>
    <string name="pref_notif_title">Notification</string>
    <string name="pref_notif_on">Notifications activées</string>
    <string name="pref_notif_off">Notifications désactivées</string>
    <string name="pref_vibrate_title">Vibration</string>
    <string name="pref_vibrate_on">Vibration activée</string>
    <string name="pref_vibrate_off">Vibration désactivée</string>
    <string name="pref_deli_vibrate_title">Vibration réception</string>
    <string name="pref_deli_vibrate_on">Vibration activée</string>
    <string name="pref_deli_vibrate_off">Vibration désactivée</string>
    <string name="pref_hide_keyboard_title">Clavier</string>
    <string name="pref_hide_keyboard_on">Le clavier se cache après l\'envoi d\'un message</string>
    <string name="pref_hide_keyboard_off">Le clavier ne se cache pas après l\'envoi d\'un message</string>
    <string name="pref_first_uppercase_title">Première lettre</string>
    <string name="pref_first_uppercase_on">est en majuscule</string>
    <string name="pref_first_uppercase_off">est en minuscule</string>
    <string name="pref_sms">SMS</string>
    <string name="pref_sms_sum">Au chargement d\'une conversation</string>
    <string name="pref_sms_onload">Nombre de sms</string>
    <string-array name="sms_onload">
        <item>21</item>
        <item>42</item>
        <item>128</item>
        <item>Tous</item>
    </string-array>
    <string name="pref_conversation">Conversations</string>
    <string name="pref_conversation_onload">Nombre de conversations</string>
    <string name="pref_conversation_sum">Au chargement de la liste des conversations</string>
    <string-array name="conversation_onload">
        <item>10</item>
        <item>Toutes</item>
    </string-array>
    <string name="pref_text_size_title">Taille du texte</string>
    <string name="pref_text_size_dialog">Taille du texte</string>
    <string name="pref_text_size_sum">Choix de la taille du texte</string>
    <string-array name="pref_text_size">
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <color name="bg_conversationList" >#FF2A2A2A</color>
    <color name="bg_conversationList_focus" >#FF6A6A6A</color>
    
    <string name="conversation_dialog_0">Options relatives aux conversations</string>
    <string name="conversation_dialog_1">Supprimer</string>
    <string name="conversation_dialog_2">Vider</string>
    <string name="conversation_dialog_3">Voir contact</string>
    <string name="conversation_dialog_4">Ouvrir</string>
    <string name="conversation_dialog_5">Supprimer anciens messages</string>
    <string name="message_dialog_0">Options relatives aux messages</string>
    <string name="message_dialog_1">Supprimer</string>
    <string name="message_dialog_2">Transférer</string>
    <string name="message_dialog_3">Afficher les détails</string>
    <string name="message_dialog_4">Copier</string>
    <string name="pref_hold_message_off">Désactivée</string>
    <string name="pref_hold_message_on">Activée</string>
    <string name="pref_hold_message_title">Supp. anciens messages</string>
    <string name="pref_hold_message_num_sum">Nombre de SMS à garder</string>
    <string name="pref_hold_message_num_title">Anciens messages</string>

</resources>
