<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000000" >
    <TextView
        android:id="@+id/title_message_dialog"
        android:padding="15dp"
        android:text="@string/message_dialog_0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_marginBottom="4dp"
        android:textColor="#DDDDDD"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/transfert_message_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/message_dialog_2"
        android:background="#242424"
        android:layout_marginBottom="2dp"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />
	<TextView
        android:id="@+id/copy_message_dialog"
        android:padding="15dp"
        android:text="@string/message_dialog_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#242424"
        android:layout_marginBottom="2dp"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/detail_message_dialog"
        android:padding="15dp"
        android:text="@string/message_dialog_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#242424"
        android:layout_marginBottom="2dp"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/supp_message_dialog"
        android:padding="15dp"
        android:text="@string/message_dialog_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#242424"
        android:layout_marginBottom="2dp"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />
</LinearLayout>

